# periodicdent42

./: .brev_persistent_auth.sh  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  ADAPTIVE_ROUTER_BUILD_SUMMARY.md  ADAPTIVE_ROUTER_PROTOTYPE.md  AGENTIC_LOOP_SUMMARY_OCT13_2025.md  AGENTIC_OPTIMIZATION_MISSION.md  AGENTS.md  ANALYTICS_DASHBOARD_STATUS.md  ANALYTICS_DEPLOYMENT_STATUS.md  ANALYTICS_FIXED.md  ARCHITECTURE.md  ARCHITECT_REPORT_SDPA_SUPERIORITY.md  ARCHIVE_OLD_FILES_ANALYSIS.md  ATTRIBUTION_COMPLIANCE_COMPLETE.md  AUDIT_COMPLETE_SUMMARY.txt  AUDIT_IMPLEMENTATION_SUMMARY.md  BASELINE_CHARACTERIZATION_REPORT_OCT14_2025.md  BASELINE_REVERT_SUMMARY.md  BENCHMARK_RESULTS_FINAL.md  BETE_DEPLOYMENT_GUIDE.md  BETE_FINAL_SUMMARY.md  BETE_NET_IMPLEMENTATION_COMPLETE.md  BREAKTHROUGH_FINDING.md  BREV_H100_READY.md  BREV_H100_SETUP.md  BREV_H100_SETUP_STATUS.md  BREV_PERSISTENT_SETUP.md  BREV_QUICKSTART.md  BURN_AUTOTUNE_COMPLETE.md  CHANGELOG.md  CHANGELOG_PROVENANCE.md  CHAOS_ENGINEERING_GUIDE.md  CITATIONS.bib  (+411 more)
BlackwellSparseK/: .gitignore  528_TFLOPS.md  BASELINE_ESTABLISHED_OCT30.md  BEAT_CUTLASS.md  BENCHMARK_STRATEGY_OCT30.md  BLACKWELLSPARSEK_BENCHMARK_OCT29.md  BREAKTHROUGH_597_TFLOPS.md  BSR_HONEST_STATUS.md  BURN_INTEGRATION_ASSESSMENT.md  CEILING_REACHED.md  CEILING_REACHED_599_TFLOPS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPARISON_FA3.md  CONTRIBUTING.md  CPP_EXTENSION_README.md  CUDA_13_BLOCKER_OCT31.md  CUDA_13_CUTLASS_43_VERIFIED.md  CUTLASS_COMPARISON_NOV1.md  CUTLASS_CONTRIBUTION.md  CUTLASS_CUTE_SUCCESS.md  CUTLASS_DIAGNOSTIC_REPORT.md  CUTLASS_FMHA_BASELINE.md  DEPENDENCY_REFERENCE_TABLE.md  DEPLOYMENT_READY.md  DEPLOY_TO_L4.sh  Dockerfile  ENVIRONMENT_DEPLOYMENT_OCT30.md  EVIDENCE_PACKAGE_OCT30.md  EXECUTION_PLAN_SPARSE_ATTENTION.md  EXECUTIVE_SUMMARY_CUDA13_SUCCESS.md  EXECUTIVE_SUMMARY_OCT30.md  EXPERT_ROADMAP.md  FA3_INTEGRATION_DESIGN.md  FA3_POC_INTEGRATION.md  FINAL_ASSESSMENT.md  FINAL_ATTENTION_RESULTS.md  FINAL_STATUS.md  GAP_ANALYSIS.md  (+61 more)
BlackwellSparseK/.archive/: BASELINE_ACTUAL_H100.md  CEILING_ANALYSIS_NOV1.txt  CUTLASS_4.3_CUDA13_READY.md  CUTLASS_BENCHMARK_RESULTS.md  CUTLASS_STRICT_BUILD_SCRIPT.sh  CUTLASS_STRICT_BUILD_SCRIPT_v2.sh  DEPLOYMENT_SUMMARY_OCT30.md  Dockerfile.profiling  ENVIRONMENT.md  ENVIRONMENT_SUITE_COMPLETE.md  EXPERT_ENVIRONMENT_READY.md  GUARDRAIL_KIT_DEPLOYED.md  H100_BASELINE_OCT31.md  H100_CUDA13_FINAL_STATUS_OCT30.md  H100_DEPLOYMENT_GUIDE.md  H100_DEPLOYMENT_READY.md  H100_KERNEL_BENCHMARK_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_OCT30.md  NSIGHT_COMPUTE_RUNPOD_WORKAROUND.md  NSIGHT_SYSTEMS_BASELINE_OCT31.md  PRAGMATIC_PATH_FORWARD.md  PROFILING_COMPLETE_OCT31.md  RESULTS_NOV1.txt  RUNPOD_CUDA13_DEPLOYMENT_GUIDE.md  STATUS_NOV1_2025.md  STRATEGIC_EVIDENCE_COMPLETE_OCT30.md  STRICT_ENFORCEMENT_COMPLETE_OCT31.md  WGMMA_PROGRESS_NOV1.md  WHY_NOT_FA3.md
BlackwellSparseK/.cursor/: config.json  preflight.yml
BlackwellSparseK/PR_READY/: DAY2_SUBMIT_NOW.sh  PR_SUBMISSION_CHECKLIST.md  START_HERE.md
BlackwellSparseK/benchmarks/: README.md  __init__.py  bench_kernel_events.cu  compare_all_baselines.py  compare_sdpa.py  comprehensive_benchmark.py  h100_quick_test.sh  ncu_roofline.sh  perf.py  plot_roofline.py
BlackwellSparseK/docker/: blackwell-sparsek-bench.dockerfile  blackwell-sparsek-dev.dockerfile  blackwell-sparsek-prod.dockerfile
BlackwellSparseK/docs/: QUICKSTART.md
BlackwellSparseK/examples/: cutlass_cute_h100.cu  quickstart.py  vllm_server.py  xformers_demo.py
BlackwellSparseK/python/: __init__.py  bsk_bindings.cpp  ops.py  utils.py
BlackwellSparseK/reports/: PROFESSIONAL_NCU_REPORT.txt
BlackwellSparseK/scripts/: bench.sh  bootstrap_env.sh  (+5 more)
autonomous-baseline/: ACTIVE_LEARNING_AUDIT_NEURIPS_COMPLIANCE.md  ACTIVE_LEARNING_PHASE1_PHASE2_COMPLETE.md  AUDIT_COMPLETE_SUMMARY.md  A_LEVEL_PROGRESS.md  CALIBRATION_FIX_STATUS.md  CLAIMS_VERIFICATION_REPORT.md  COMMIT_READY.md  COVERAGE_HARDENING_COMPLETE.md  DECISION_QUICK_SUMMARY.md  EXECUTIVE_SUMMARY_VALIDATION.md  FRAMEWORK_DEPLOYMENT_SUMMARY.md  HONEST_FINDINGS.md  NOVELTY_FINDING.md  PHASE10_PLAN.md  PHASE10_TIER2_COMPLETE.md  PHASE10_TIER2_DIAGNOSTIC.md  PHASE10_TIER2_DKL_FIX_SUMMARY.md  PHASE6_COMPLETE_STATUS.md  PHASE6_LAUNCH_STATUS.md  PHASE6_MASTER_CONTEXT.md  PHASE7_COMPLETE_STATUS.md  QUALITY_BAR_VERIFICATION_OCT11_2025.md  QUICK_STATUS_OCT10_2025.md  README.md  REPRODUCIBILITY.md  SESSION_SUMMARY_OCT9_NIGHT.md  STATUS_UPDATE_OCT9_1748.md  TASK2_AL_HONEST_FINDINGS.md  TIER2_COMPLETE_OCT9_2025.md  TIER2_NEXT_STEPS_DECISION.md  TIER2_P1_RUNNING.md  TIER2_STATISTICAL_VALIDATION_COMPLETE.md  VALIDATION_TASK1_COMPLETE.md  WELCOME_BACK.md  compute_ablation_stats_enhanced.py  pyproject.toml  test_statistical_improvements.py  verify_claims.sh
cudadent42/: .gitignore  ARCHITECTURE_MISMATCH_ANALYSIS.md  BENCHMARK_EXECUTION_SESSION_OCT11_2025.md  BENCHMARK_REPORT_OCT13_2025.md  BENCHMARK_SESSION_OCT12_LEARNINGS.md  BENCHMARK_STATUS_ASSESSMENT.md  BF16_COMPILATION_PROBLEM_EXHAUSTIVE_ANALYSIS.md  CMakeLists.txt  CONTINUE_HERE.md  CUDA_EXPERT_SYSTEMATIC_APPROACH.md  CUDA_KERNEL_LEARNING_LOOP.md  CUDA_QUICK_REFERENCE.md  DAY1-3_IMPLEMENTATION_COMPLETE.md  DAY4-6_ONLINE_SOFTMAX_COMPLETE.md  FA2_SPLIT_K_DESIGN.md  FINAL_SESSION_UPDATE_OCT11_9PM.md  FIX_APPLIED_READY_FOR_VALIDATION.md  FIX_INSTRUCTIONS.md  FLASHMOE_SCIENCE_DAY1-3_SESSION_SUMMARY.md  FLASHMOE_SCIENCE_SESSION_COMPLETE.md  FRESH_START_README.md  GIT_INTEGRATION_COMPLETE.md  GPU_SESSION_ACTIVE_OCT12.md  GPU_SESSION_ACTIVE_OCT12_2025.md  GPU_SETUP_GUIDE.md  GPU_VALIDATION_SESSION_OCT12_EVENING.md  IMPROVEMENTS_SUMMARY.md  ITERATION1_INCOMPLETE_OCT13_2025.md  ITERATION3_PROFILING_ANALYSIS.md  ITERATION4_SKIP_VECTORIZED.md  KNOWLEDGE_TRANSFER_EVOENGINEER_RBK.md  LICENSE  Makefile  NEXT_SESSION_QUICK_START.md  OPTIMIZATION_SESSION_OCT12.md  OPTION_C_ATTEMPT_OCT11_2025.md  PATTERNS.md  PERFORMANCE_REGRESSION_ANALYSIS_OCT12.md  PHASE1_KEY_FINDING.md  PHASE2_BREAKTHROUGH_OCT11_2025.md  (+57 more)
rust/: Cargo.toml
(+2279 files in other folders)
