[workspace]
members = [
    "core",
    "service",
    "pycore",
    "wasm-demo",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Autonomous R&D Intelligence Layer Team"]

[workspace.metadata]
cargo-lock = true

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.12"
ndarray = { version = "0.15", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_with = "3"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
uuid = { version = "1", features = ["v4", "serde"] }
proptest = "1"
# service
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.14", features = ["yaml"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "tls"] }
opentelemetry-prometheus = "0.14"
opentelemetry-stdout = "0.3"
prometheus = "0.13"
secrecy = "0.8"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.11", features = ["transport"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
prost = "0.12"
prost-types = "0.12"
utoipa = { version = "4", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3", "abi3-py39"] }

# wasm
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
