[package]
name = "service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "service"
path = "src/main.rs"

[lib]
name = "service"
path = "src/lib.rs"

[features]
default = []
postgres = ["periodic_core/postgres"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
futures.workspace = true
hyper.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry-stdout.workspace = true
periodic_core = { path = "../core", package = "core" }
prometheus.workspace = true
prost.workspace = true
prost-types.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"

[dev-dependencies]
periodic_core = { path = "../core", package = "core" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport"] }
serde_json.workspace = true
