[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "periodic-pycore"
version = "0.1.0"
description = "Python bindings for the Periodic core planner"
authors = [{name = "Autonomous R&D Intelligence Layer Team"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
bindings = "pyo3"
features = ["pybind"]
